
- #13916: Add Option.product and Option.Syntax.
  (Nicolás Ojeda Bär, review by Daniel Bünzli, Gabriel Scherer and David
  Allsopp)

- #13995: Add Option.blend.
  (Kate Deplaix, review by Daniel Bünzli, Gabriel Scherer,
   Nicolás Ojeda Bär, Florian Angeletti and Josh Berdine)

- #14086: Add Domain.running_domain_count.
  (Nicolás Ojeda Bär, review by David Allsopp and Gabriel Scherer)

### Type system:

- #13781: Set scope of internal type nodes during abbreviation expansion
  rather than recursing during unification.
  (Jacques Garrigue, review by Gabriel Scherer)

* #13830: fail rather than silently create abstract module types when avoiding
  (i.e. hiding) signature items, as in:
  ```ocaml
    module N = struct
      open (struct type t = A | B end)
      module type T = sig type u = t * int end
    end
  ```
  Before, it was succeeding with `module N : sig module type T end`, now it
  fails. Similarly for anonymous functor calls (of the form `F(struct ... end))
  (Clement Blaudeau, review by Gabriel Scherer)

* #14066: catch invalid aliases introduced by signature constraints during
  merging rather than in subtyping:
  ```ocaml
    module X = struct end module F (_:sig end) = struct end
    module type T = (sig module X0 : sig end module X1 = X0 end)
      with module X0 := F(X)
  ```
  Before, it failed with a subtyping error. Now, it fails with a proper error,
  explaining that `X1` would keep an invalid alias to `F(X)`
  (Clement Blaudeau, review by Florian Angeletti)

### Other libraries:

* #14046: On Windows, `Unix.kill pid Sys.sigkill` causes the receiving process
  to exit with code ERROR_PROCESS_ABORTED (1067) instead of 0.
  (Nicolás Ojeda Bär, review by Miod Vallat, Antonin Décimo and David Allsopp)

- #14020: Add Unix.unsetenv.
  (Nicolás Ojeda Bär, review by Antonin Décimo and David Allsopp)

- #13447: Symmetrize shared `Sys` and `Unix` functions. Apply fixes
  of #12072, #12184, #12320, and #13166, from `Sys.rename` to