@@ -49,6 +49,10 @@ Working version
 - #14086: Add Domain.running_domain_count.
   (Nicolás Ojeda Bär, review by David Allsopp and Gabriel Scherer)
 
+- #13920: add Option.{for_all, exists}
+  (Gabriel Scherer, review by Kate Deplaix, Nicolás Ojeda Bär, Richard Eisenberg
+  and Jeremy Yallop)
+
 ### Type system:
 
 - #13781: Set scope of internal type nodes during abbreviation expansion
